# Chip8-Emulator

./: .gitignore  CMakeLists.txt  main.c  remaining_opcodes.txt
src/: chip8_cpu.c  chip8_cpu.h  gfx.c  gfx.h  sound.c  sound.h
